# python-starter

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  docker-compose.gpu.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: build-docker.yml  ci.yml  quality.yml  release.yml  test.yml
alembic/: env.py
configs/: default.yaml
configs/data/: default.yaml
configs/model/: minimind.yaml  minimind_small.yaml
configs/training/: dpo.yaml  pretrain.yaml  sft.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu
scripts/: evaluate.py  inference.py  preprocess.py  train.py
src/python_starter/: __init__.py
src/python_starter/api/: __init__.py  dependencies.py  main.py  models.py
src/python_starter/api/routers/: experiments.py  health.py  inference.py
src/python_starter/api/schemas/: models.py
src/python_starter/core/: __init__.py  dataset.py  model.py  tokenizer.py  trainer.py  utils.py
src/python_starter/experiments/: __init__.py  registry.py  tracker.py
src/python_starter/infrastructure/: __init__.py  config.py  database.py  logging.py  redis_client.py
src/python_starter/tasks/: __init__.py  celery_app.py  training.py
tests/: conftest.py  test_api.py  test_model.py  test_trainer.py
